--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Web富文本编辑器",
   "main": "dist/xeditor.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "export BABEL_ENV=development && export NODE_ENV=development && node build/dev-server.js",
+    "dev": "set BABEL_ENV=development && set NODE_ENV=development && node build/dev-server.js",
+    "build:dev": "export BABEL_ENV=development && export NODE_ENV=development && webpack --config build/webpack.build.config.js",
+    "build:test": "export BABEL_ENV=testing && export NODE_ENV=testing && webpack --config build/webpack.build.config.js",
+    "build:lab": "export BABEL_ENV=labing && export NODE_ENV=labing && webpack --config build/webpack.build.config.js",
+    "build:pro": "export BABEL_ENV=production && export NODE_ENV=production && webpack --config build/webpack.build.config.js",
+    "doc": "./node_modules/.bin/jsdoc -c .jsdoc.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +27,46 @@
   "bugs": {
     "url": "https://github.com/iq9891/xEditor/issues"
   },
-  "homepage": "https://github.com/iq9891/xEditor#readme"
+  "homepage": "https://github.com/iq9891/xEditor#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "connect-history-api-fallback": "^1.4.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.16.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.4",
+    "jsdoc": "^3.5.5",
+    "minami": "^1.2.3",
+    "shelljs": "^0.7.8",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.9.4",
+    "webpack-hot-middleware": "^2.20.0",
+    "webpack-merge": "^4.1.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "iOS > 7",
+    "Android >= 4.0",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
