--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/iq9891/xEditor#readme",
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
@@ -37,6 +38,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "connect-history-api-fallback": "^1.4.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-friendly-formatter": "^3.0.0",
@@ -50,8 +52,13 @@
     "http-proxy-middleware": "^0.17.4",
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
+    "node-sass": "^4.6.1",
+    "postcss-loader": "^2.0.8",
+    "sass-loader": "^6.0.6",
     "shelljs": "^0.7.8",
+    "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.4",
