--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
