--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "scripts": {
     "start": "export BABEL_ENV=development && export NODE_ENV=development && node build/dev-server.js",
     "dev": "set BABEL_ENV=development && set NODE_ENV=development && node build/dev-server.js",
-    "build:dev": "export BABEL_ENV=development && export NODE_ENV=development && webpack --config build/webpack.build.config.js",
     "build:test": "export BABEL_ENV=testing && export NODE_ENV=testing && webpack --config build/webpack.build.config.js",
-    "build:lab": "export BABEL_ENV=labing && export NODE_ENV=labing && webpack --config build/webpack.build.config.js",
     "build:pro": "export BABEL_ENV=production && export NODE_ENV=production && webpack --config build/webpack.build.config.js",
     "doc": "./node_modules/.bin/jsdoc -c .jsdoc.js",
     "changelog": "./node_modules/.bin/conventional-changelog -p jscs -i changelog.md -s -r 0",
-    "prepublishOnly": "npm run build:test && npm run build:pro"
+    "prepublishOnly": "yarn build:pro && yarn build:test"
   },
   "repository": {
     "type": "git",
@@ -36,7 +34,7 @@
   },
   "homepage": "https://github.com/iq9891/xEditor#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^9.1.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
@@ -44,13 +42,14 @@
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "connect-history-api-fallback": "^1.4.0",
     "conventional-changelog-cli": "^1.3.5",
     "css-loader": "^0.28.7",
-    "eslint": "^4.10.0",
+    "eslint": "^5.4.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
@@ -61,18 +60,25 @@
     "http-proxy-middleware": "^0.17.4",
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.6.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
     "shelljs": "^0.7.8",
     "style-loader": "^0.19.0",
+    "stylelint": "^9.5.0",
+    "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
+    "webpack": "^4.17.0",
+    "webpack-chain": "^4.9.0",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.4",
     "webpack-hot-middleware": "^2.20.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "webpackbar": "^2.6.3"
   },
   "engines": {
     "node": ">= 4.0.0",
@@ -84,5 +90,6 @@
     "Android >= 4.0",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "dependencies": {}
 }
