build($npm): add pre-commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,30 @@
-.Ds_store
-node_modules
-*.swp
-.tmp
-*.log
+out
+*.iml
 .idea
-dist/
+.ipr
+.iws
+*.diff
+.tags*
+*.patch
+*.bak
+.DS_Store
+node_modules/
+.project
+.settings
+.*proj
+.svn/
+*.swp
+*.swo
+*.log
+*.log.*
+*.ini
+yarn.lock
+package-lock.json
+yarn-error.log
+.vscode
+$Recycle.Bin
+dist
+.cache*
+coverage
+docs/
+.gitlab-ci.yml
