--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "dev": "set BABEL_ENV=development && set NODE_ENV=development && node build/dev-server.js",
     "build:test": "export BABEL_ENV=testing && export NODE_ENV=testing && webpack --config build/webpack.build.config.js",
     "build:pro": "export BABEL_ENV=production && export NODE_ENV=production && webpack --config build/webpack.build.config.js",
-    "doc": "./node_modules/.bin/jsdoc -c .jsdoc.js",
-    "changelog": "./node_modules/.bin/conventional-changelog -p jscs -i changelog.md -s -r 0",
+    "changelog": "./node_modules/.bin/conventional-changelog -p angular -i changelog.md -s -r 0",
     "eslint": "eslint --ext .js,.vue src --fix",
     "stylelint": "stylelint src/**/*.scss",
     "lint": "npm run eslint && npm run stylelint",
@@ -62,12 +61,13 @@
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
-    "jsdoc": "^3.5.5",
+    "lint-staged": "^7.2.2",
     "minami": "^1.2.3",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.6.1",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^2.0.8",
+    "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.6",
     "shelljs": "^0.7.8",
     "style-loader": "^0.19.0",
@@ -105,9 +105,5 @@
   },
   "pre-commit": [
     "lint-staged"
-  ],
-  "dependencies": {
-    "lint-staged": "^7.2.2",
-    "pre-commit": "^1.2.2"
-  }
+  ]
 }
